tests/paczka1/small_fuzzy/21357457.err
Error in line 1: SDh9Xp S652 65,6
Error in line 2: SDh9Xp A271 11,4
Error in line 5: oHPueT A392 73,6
Error in line 10: oHPueT S270 34,4
